--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 .DS_Store
 debug*
-datasets/
+datasets/trainA*
 checkpoints/
 results/
 build/
 dist/
+*.pt
 *.png
+*.jpg
 torch.egg-info/
 */**/__pycache__
 torch/version.py
