--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,13 @@ datasets/trainB*
 checkpoints/
 results/
 build/
-celeba/
+celeba/*
 dist/
 *.zip
-*.pt
-*.png
-*.jpg
+**.pt
+datasets/**.zip
+datasets/**.jpg
+datasets/**.png
 torch.egg-info/
 */**/__pycache__
 torch/version.py
